--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                     </div>
                     <br>
                     <div>
-                        <b>Tools</b><br>
+                        <b>Tools & Technologien</b><br>
                         Figma · Marvel App · Tobii Eye Tracker
                     </div>
                     <br>
@@ -606,7 +606,7 @@
                     </div>
                     <br>
                     <div>
-                        <b>Tools</b><br>
+                        <b>Tools & Technologien</b><br>
                         Figma · Marvel App · Tobii Eye Tracker
                     </div>
                     <br>
@@ -622,9 +622,46 @@
                     <span class="text-primary"><a href="https://marvelapp.com/28eg613/screen/22708436">Zum iWatch-Prototyp ⟶</a></span>
                 </div>
             </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Webseite für die  RenoTech Fenstermontagen GmbH</h3>
+                    <div class="subheading mb-3">Privater Auftrag · Einzelarbeit</div>
+                    <div>
+                        <b>Auftrag</b><br>
+                        Die RenoTech Fenstermontagen GmbH ist ein Einmannunternehmen mit Sitz in Dürrenäsch AG. Über die
+                        kalten Jahreszeiten ist die Arbeitsauslastung meistens geringer. Aus diesem Grund möchte der Besitzer eine Webseite.
+                        So kann er sein Angebot besser zur Geltung bringen.
+                    </div>
+                    <br>
+                    <div>
+                        <b>Herausforderung</b><br>
+                        Von der Homepage besteht bereits eine klare Vorstellung. Diese soll möglichst genau umgesetzt werden.
+                        Die Webseite soll prägnant hervorheben, was das Unternehmen anbietet, wer dort anbietet und wo es zu finden ist.
+                        Für die Umsetzung muss auf ein responsive Webdesign geachtet werden.
+                    </div>
+                    <br>
+                    <div>
+                        <b>Umsetzung</b><br>
+                        Anforderungsanalyse · Prototyping
+                    </div>
+                    <br>
+                    <div>
+                        <b>Tools & Technologien</b><br>
+                        Balsamiq · Materialize
+                    </div>
+                    <br>
+                    <div>
+                        <b>Resultat</b><br>
+                        Die Webseite ist einfach gehalten und weist eine klare Nutzerführung auf. Die relevanten Daten sind
+                    mit nur einem Klick von der Homepage aus zu erreichen.
+                    </div>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary"><a href="http://renotech-gmbh.ch/">Zur Webseite ⟶</a></span>
+                </div>
+            </div>
         </div>
     </section>
-
 </div>
 
 <!-- Bootstrap core JavaScript -->
