--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-globe-americas"></i>
-                    Englisch: Gute mündliche und schriftliche Kenntnisse
+                    Englisch: Gute mündliche und schriftliche Kenntnisse (Level B2)
                 </li>
                 <li>
                     <i class="fa-li fa fa-globe-americas"></i>
