--- a/index.html
+++ b/index.html
@@ -491,6 +491,10 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-smile-beam"></i>
+                    Zeichnen
+                </li>
+                <li>
+                    <i class="fa-li fa fa-smile-beam"></i>
                     Lesen
                 </li>
             </ul>
