--- a/index.html
+++ b/index.html
@@ -387,6 +387,10 @@
                     <i class="fa-li fa fa-check"></i>
                     MySQL (Theorie)
                 </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    TYPO3
+                </li>
             </ul>
             <br>
             <div class="subheading mb-3">Tools</div>
