--- a/index.html
+++ b/index.html
@@ -387,10 +387,6 @@
                     <i class="fa-li fa fa-check"></i>
                     MySQL (Theorie)
                 </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    TYPO3
-                </li>
             </ul>
             <br>
             <div class="subheading mb-3">Tools</div>
@@ -418,6 +414,22 @@
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     Microsoft Office
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                SharePoint
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    GitLab
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    GitHub
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    TYPO3
                 </li>
             </ul>
             <br>
