--- a/index.html
+++ b/index.html
@@ -349,46 +349,6 @@
                 </li>
             </ul>
             <br>
-            <div class="subheading mb-3">Weitere Kenntnisse</div>
-            <ul class="fa-ul mb-0">
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    User Interface Design
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    User Experience Design
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    Story Mapping
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    Usability Testing
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    Projektmanagement
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    Vorgehensmodelle (Scrum, Wasserfall, RUP)
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    Public Relations
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    Requirements Engineering
-                </li>
-                <li>
-                    <i class="fa-li fa fa-check"></i>
-                    MySQL (Theorie)
-                </li>
-            </ul>
-            <br>
             <div class="subheading mb-3">Tools</div>
             <ul class="fa-ul mb-0">
                 <li>
@@ -430,6 +390,42 @@
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     TYPO3
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    MySQL (Theorie)
+                </li>
+            </ul>
+            <br>
+            <div class="subheading mb-3">Weitere Kenntnisse</div>
+            <ul class="fa-ul mb-0">
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    User Interface Design
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    User Experience Design
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Usability Engineering
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Requirements Engineering
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Vorgehensmodelle (Scrum, Wasserfall, RUP)
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Public Relations
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Projektmanagement
                 </li>
             </ul>
             <br>
