changed RenoTech Text

--- a/index.html
+++ b/index.html
@@ -648,9 +648,9 @@
                     <div class="subheading mb-3">Privater Auftrag · Einzelarbeit</div>
                     <div>
                         <b>Auftrag</b><br>
-                        Die RenoTech Fenstermontagen GmbH ist ein Einmannunternehmen mit Sitz in Dürrenäsch AG. Über die
-                        kalten Jahreszeiten ist die Arbeitsauslastung meistens geringer. Aus diesem Grund möchte der Besitzer eine Webseite.
-                        So kann er sein Angebot besser zur Geltung bringen.
+                        Die RenoTech Fenstermontagen GmbH ist ein Einmannunternehmen mit Sitz in Dürrenäsch AG. Neue Kundenbeziehungen
+                        haben sich bisher nur durch Empfehlung ergeben. Aus diesem Grund möchte der Besitzer eine Webseite.
+                        So kann er sein Angebot online zur Geltung bringen und hat die Möglichkeit mehr potenzielle Interessenten zu erreichen.
                     </div>
                     <br>
                     <div>
