reihenfolge zertifikate und kurse

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                SharePoint
+                    SharePoint
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -437,7 +437,11 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    First Certificate in English
+                    Fotografie Aufbaukurs
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Fotografie Grundkurs
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -445,9 +449,8 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Fotografie Grund- und Aufbaukurs
+                    First Certificate in English
                 </li>
-                <li>
             </ul>
         </div>
     </section>
@@ -644,19 +647,24 @@
             </div>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Webseite für die  RenoTech Fenstermontagen GmbH</h3>
+                    <h3 class="mb-0">Webseite für die RenoTech Fenstermontagen GmbH</h3>
                     <div class="subheading mb-3">Privater Auftrag · Einzelarbeit</div>
                     <div>
                         <b>Auftrag</b><br>
-                        Die RenoTech Fenstermontagen GmbH ist ein Einmannunternehmen mit Sitz in Dürrenäsch AG. Neue Kundenbeziehungen
-                        haben sich bisher nur durch Empfehlung ergeben. Aus diesem Grund möchte der Besitzer eine Webseite.
-                        So kann er sein Angebot online zur Geltung bringen und hat die Möglichkeit mehr potenzielle Interessenten zu erreichen.
+                        Die RenoTech Fenstermontagen GmbH ist ein Einmannunternehmen mit Sitz in Dürrenäsch AG. Neue
+                        Kundenbeziehungen
+                        haben sich bisher nur durch Empfehlung ergeben. Aus diesem Grund möchte der Besitzer eine
+                        Webseite.
+                        So kann er sein Angebot online zur Geltung bringen und hat die Möglichkeit mehr potenzielle
+                        Interessenten zu erreichen.
                     </div>
                     <br>
                     <div>
                         <b>Herausforderung</b><br>
-                        Von der Homepage besteht bereits eine klare Vorstellung. Diese soll möglichst genau umgesetzt werden.
-                        Die Webseite soll prägnant hervorheben, was das Unternehmen anbietet, wer dort anbietet und wo es zu finden ist.
+                        Von der Homepage besteht bereits eine klare Vorstellung. Diese soll möglichst genau umgesetzt
+                        werden.
+                        Die Webseite soll prägnant hervorheben, was das Unternehmen anbietet, wer dort anbietet und wo
+                        es zu finden ist.
                         Für die Umsetzung muss auf ein responsive Webdesign geachtet werden.
                     </div>
                     <br>
@@ -672,8 +680,9 @@
                     <br>
                     <div>
                         <b>Resultat</b><br>
-                        Die Webseite ist einfach gehalten und weist eine klare Nutzerführung auf. Die relevanten Daten sind
-                    mit nur einem Klick von der Homepage aus zu erreichen.
+                        Die Webseite ist einfach gehalten und weist eine klare Nutzerführung auf. Die relevanten Daten
+                        sind
+                        mit nur einem Klick von der Homepage aus zu erreichen.
                     </div>
                 </div>
                 <div class="resume-date text-md-right">
