new ip for cookiecaster

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                     </div>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary"><a href="http://86.119.39.190:3000/">Zum Prototyp ⟶</a></span>
+                    <span class="text-primary"><a href="http://pub018.cs.technik.fhnw.ch/">Zum Prototyp ⟶</a></span>
                 </div>
             </div>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
